Correcting generator problems